--- a/views/custommerPage.ejs
+++ b/views/custommerPage.ejs
@@ -12,7 +12,7 @@
             <div class=" container-fluid fixed" data-aos="fade-left" >
                <br><br><br><br><br><br><br>
                 <div  >
-                  <h1 class="text-light" style="font-size: 60px; font-family: poppins;" >Search your favorite desination </h1>
+                  <h1 id="idlaunchPageText" class="text-light" style="font-size: 60px; font-family: poppins;" >Search your favorite desination </h1>
                   <div class="  container-fluid w-100 col-11 rounded border " style="  background-color:rgba(186, 90, 21, 0.748); height: 100px;" >
                     <form action="/custom/customSearch" method="post">
                             <!-- Main Search box Start here -->
@@ -54,6 +54,7 @@
       </main>
       
     </body>
+    <script src="/Script/Script_Signup.js"> </script>
     <script src="/Script/customerSearch.js"> </script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/aos.js"></script>
