--- a/views/detailedSearch.ejs
+++ b/views/detailedSearch.ejs
@@ -97,7 +97,7 @@
                             </div>
                             <div class="col "
                             style="border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.33);">
-                                <button  onclick=""  type="submit" class="btn text-light btn-secondary bi bi-search "> LOAD </button>
+                                <button  onclick=""  type="submit" class="btn text-light  bi bi-search "> LOAD </button>
                             </div>
                      
 
