--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -11,13 +11,13 @@
   <form id="loginform" action="#" method="post">
     <div class="LoginPage d-flex justify-content-evenly" data-ride="carousel" style="background-position:center  ;background-size:cover; background-image: url('/Images/BackGround_Admin.jpg'  );">
       <div class=" container-fluid" style="background-color: rgba(62, 62, 62, 0.668);">
-        <div class="container-fluid d-flex flex-wrap " style="min-height: 100vh;">
-          <div class="container col-md-9 col-lg-9 col-sm-12 ">
+        <div class="container-fluid d-flex flex-wrap " style="min-height: 100vh;margin-top: 25%; ">
+          <div class="container col-md-9 col-lg-8 col-sm-12 ">
             <br><br><br><br><br>
-            <small id="idanimatedMessageLogin" class="text-warning" style="font-size: 2.5rem; height: 100px;">Elevate the Celebration!</small>
+            <small id="idanimatedMessageLogin" class="text-warning custom-text" style="font-size: 2.5rem; height: 100px;">Elevate the Celebration!</small>
           </div>
         
-          <div class="container col-md-3 col-lg-3 col-sm-12 border border-light rounded m-4 p-3" style="background-color: rgba(86, 81, 59, 0.5);">
+          <div class="container col-md-3 col-lg-3 col-sm-12 border border-light rounded m-4 p-3" style="background-color: rgba(86, 81, 59, 0.5); height: 400px;">
             <div class="container mt-2">
               <div class="container d-flex align-items-center" style="height: 50px;"></div>
               <div class="container align-items-center" style="height: 80px;">
